# ci-recipes

./: .editorconfig  .gitignore  README.md  pyproject.toml  tox.ini
ci_info/: __init__.py  push.py
docs/: conf.py  recipes.rst
recipes/: compare_pushes.py  context.yml  inspect_bugbug.py  push_data.py  push_health.py  scheduler_analysis.py
recipes/queries/: decision_artifacts.query  parent_push_ids.query  push_results.query  push_revisions.query
recipes/strategies/: randomchance.py  randomchance_10.py  randomchance_50.py
test/: conftest.py  test_queries.py  test_recipes.py  test_recipes_integration.py
test/recipe_tests/: push_health.test
