[tool.poetry]
name = "ci-recipes"
version = "0.2.0"
description = "Collection of CI related ActiveData recipes."

packages = [
    { include = "recipes" },
]
include = [
    "extra/*",
    "*recipes/queries/*",
]

license = "MPL-2.0"
authors = [
    "Andrew Halberstadt <ahal@mozilla.com>",
    "Marco Castelluccio <marco@mozilla.com>",
]

readme = "README.md"
repository = "https://github.com/mozilla/ci-recipes"
homepage = "https://github.com/mozilla/ci-recipes"

[tool.poetry.dependencies]
python = "^3.7"
adr = "^0.16.6"
loguru = "^0.2.5"
icecream = "^1.5"
tqdm = "^4.32"
mozci = "^0.1.7"

[tool.poetry.dev-dependencies]
flake8 = "^3.7.7"
flake8-import-order = "^0.18.1"
pytest = "^3.0.0"
tox = "^3.7.0"
