[tool.poetry]
name = "ci-recipes"
version = "0.2.0"
description = "Collection of CI related ActiveData recipes."

packages = [
    { include = "recipes" },
]
include = [
    "extra/*",
    "*recipes/queries/*",
]

license = "MPL-2.0"
authors = [
    "Andrew Halberstadt <ahal@mozilla.com>",
    "Marco Castelluccio <marco@mozilla.com>",
]

readme = "README.md"
repository = "https://github.com/mozilla/ci-recipes"
homepage = "https://github.com/mozilla/ci-recipes"

[tool.poetry.dependencies]
python = "^3.7"
adr = "^0.17.5"
loguru = "^0.4.1"
icecream = "^2.0.0"
tqdm = "^4.32"
mozci = "^1.2.8"

[tool.poetry.dev-dependencies]
flake8 = "^3.7.7"
flake8-import-order = "^0.18.1"
pytest = "^5.3.5"
tox = "^3.14.5"
